# PlayArchive

./: CMakeLists.txt  README.md
docs/: README.md  architecture.md  cli_reference.md  developer_guide.md  gcf_format.md  gui_guide.md
include/playarchive/: ArchiveHandler.h  FormatManager.h  GCFEngine.h  LibArchiveHandler.h  PlatformUtils.h
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  FormatManager.cpp  GCFEngine.cpp  LibArchiveHandler.cpp  PlatformUtils.cpp
src/gui/: ArchiveModel.cpp  ArchiveModel.h  CMakeLists.txt  Main.qml  main.cpp
tests/: CMakeLists.txt  GCFTest.cpp
